// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_en_json from "virtual:nuxt-i18n-ff503de3";",
          "key": ""srcDir/en.json"",
          "relative": "srcDir/en.json",
          "specifier": "virtual:nuxt-i18n-ff503de3",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_ja_json from "virtual:nuxt-i18n-3369e867";",
          "key": ""srcDir/ja.json"",
          "relative": "srcDir/ja.json",
          "specifier": "virtual:nuxt-i18n-3369e867",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_fr_json from "virtual:nuxt-i18n-3da2909c";",
          "key": ""srcDir/fr.json"",
          "relative": "srcDir/fr.json",
          "specifier": "virtual:nuxt-i18n-3da2909c",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`files with cache configuration (relative) 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-e9231b3b" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_en_json from "virtual:nuxt-i18n-e9231b3b";",
          "key": ""srcDir/test/locales/en.json"",
          "relative": "srcDir/test/locales/en.json",
          "specifier": "virtual:nuxt-i18n-e9231b3b",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-354e4128" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_ja_json from "virtual:nuxt-i18n-354e4128";",
          "key": ""srcDir/test/locales/ja.json"",
          "relative": "srcDir/test/locales/ja.json",
          "specifier": "virtual:nuxt-i18n-354e4128",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-5627016f" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_fr_json from "virtual:nuxt-i18n-5627016f";",
          "key": ""srcDir/test/locales/fr.json"",
          "relative": "srcDir/test/locales/fr.json",
          "specifier": "virtual:nuxt-i18n-5627016f",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_fr_json)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
          "cache": "false",
          "importString": "import locale_srcDir_srcDir_test_locales_es_json from "virtual:nuxt-i18n-4fad0583";",
          "key": ""srcDir/test/locales/es.json"",
          "relative": "srcDir/test/locales/es.json",
          "specifier": "virtual:nuxt-i18n-4fad0583",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_json)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
          "cache": "false",
          "importString": "import locale_srcDir_srcDir_test_locales_es_json from "virtual:nuxt-i18n-4fad0583";",
          "key": ""srcDir/test/locales/es.json"",
          "relative": "srcDir/test/locales/es.json",
          "specifier": "virtual:nuxt-i18n-4fad0583",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_json)",
        },
        {
          "async": "() => import("virtual:nuxt-i18n-5c77b60d" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_AR_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_es_AR_json from "virtual:nuxt-i18n-5c77b60d";",
          "key": ""srcDir/test/locales/es-AR.json"",
          "relative": "srcDir/test/locales/es-AR.json",
          "specifier": "virtual:nuxt-i18n-5c77b60d",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_AR_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
        {
          "cache": true,
          "path": "locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "experimental": {
      "generatedLocaleFilePathFormat": "relative",
    },
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-e9231b3b" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_en_json from "virtual:nuxt-i18n-e9231b3b";",
          "key": ""srcDir/test/locales/en.json"",
          "relative": "srcDir/test/locales/en.json",
          "specifier": "virtual:nuxt-i18n-e9231b3b",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-354e4128" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_ja_json from "virtual:nuxt-i18n-354e4128";",
          "key": ""srcDir/test/locales/ja.json"",
          "relative": "srcDir/test/locales/ja.json",
          "specifier": "virtual:nuxt-i18n-354e4128",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-5627016f" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_fr_json from "virtual:nuxt-i18n-5627016f";",
          "key": ""srcDir/test/locales/fr.json"",
          "relative": "srcDir/test/locales/fr.json",
          "specifier": "virtual:nuxt-i18n-5627016f",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_fr_json)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
          "cache": "false",
          "importString": "import locale_srcDir_srcDir_test_locales_es_json from "virtual:nuxt-i18n-4fad0583";",
          "key": ""srcDir/test/locales/es.json"",
          "relative": "srcDir/test/locales/es.json",
          "specifier": "virtual:nuxt-i18n-4fad0583",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_json)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
          "cache": "false",
          "importString": "import locale_srcDir_srcDir_test_locales_es_json from "virtual:nuxt-i18n-4fad0583";",
          "key": ""srcDir/test/locales/es.json"",
          "relative": "srcDir/test/locales/es.json",
          "specifier": "virtual:nuxt-i18n-4fad0583",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_json)",
        },
        {
          "async": "() => import("virtual:nuxt-i18n-5c77b60d" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_AR_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_test_locales_es_AR_json from "virtual:nuxt-i18n-5c77b60d";",
          "key": ""srcDir/test/locales/es-AR.json"",
          "relative": "srcDir/test/locales/es-AR.json",
          "specifier": "virtual:nuxt-i18n-5c77b60d",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_test_locales_es_AR_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
        {
          "cache": true,
          "path": "/test/locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`lazy 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_en_json from "virtual:nuxt-i18n-ff503de3";",
          "key": ""srcDir/en.json"",
          "relative": "srcDir/en.json",
          "specifier": "virtual:nuxt-i18n-ff503de3",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_ja_json from "virtual:nuxt-i18n-3369e867";",
          "key": ""srcDir/ja.json"",
          "relative": "srcDir/ja.json",
          "specifier": "virtual:nuxt-i18n-3369e867",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_fr_json from "virtual:nuxt-i18n-3da2909c";",
          "key": ""srcDir/fr.json"",
          "relative": "srcDir/fr.json",
          "specifier": "virtual:nuxt-i18n-3da2909c",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-0f29fe58" /* webpackChunkName: "locale_srcDir_srcDir_en_main_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_en_main_json from "virtual:nuxt-i18n-0f29fe58";",
          "key": ""srcDir/en/main.json"",
          "relative": "srcDir/en/main.json",
          "specifier": "virtual:nuxt-i18n-0f29fe58",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_en_main_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-c0b7f14e" /* webpackChunkName: "locale_srcDir_srcDir_ja_main_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_ja_main_json from "virtual:nuxt-i18n-c0b7f14e";",
          "key": ""srcDir/ja/main.json"",
          "relative": "srcDir/ja/main.json",
          "specifier": "virtual:nuxt-i18n-c0b7f14e",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_ja_main_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-a4c1f89d" /* webpackChunkName: "locale_srcDir_srcDir_fr_main_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_fr_main_json from "virtual:nuxt-i18n-a4c1f89d";",
          "key": ""srcDir/fr/main.json"",
          "relative": "srcDir/fr/main.json",
          "specifier": "virtual:nuxt-i18n-a4c1f89d",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_fr_main_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en/main.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja/main.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr/main.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`multiple files 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_en_json from "virtual:nuxt-i18n-ff503de3";",
          "key": ""srcDir/en.json"",
          "relative": "srcDir/en.json",
          "specifier": "virtual:nuxt-i18n-ff503de3",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_ja_json from "virtual:nuxt-i18n-3369e867";",
          "key": ""srcDir/ja.json"",
          "relative": "srcDir/ja.json",
          "specifier": "virtual:nuxt-i18n-3369e867",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_fr_json from "virtual:nuxt-i18n-3da2909c";",
          "key": ""srcDir/fr.json"",
          "relative": "srcDir/fr.json",
          "specifier": "virtual:nuxt-i18n-3da2909c",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ece193f7" /* webpackChunkName: "locale_srcDir_srcDir_es_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_es_json from "virtual:nuxt-i18n-ece193f7";",
          "key": ""srcDir/es.json"",
          "relative": "srcDir/es.json",
          "specifier": "virtual:nuxt-i18n-ece193f7",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_es_json)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ece193f7" /* webpackChunkName: "locale_srcDir_srcDir_es_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_es_json from "virtual:nuxt-i18n-ece193f7";",
          "key": ""srcDir/es.json"",
          "relative": "srcDir/es.json",
          "specifier": "virtual:nuxt-i18n-ece193f7",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_es_json)",
        },
        {
          "async": "() => import("virtual:nuxt-i18n-2a25cb46" /* webpackChunkName: "locale_srcDir_srcDir_es_AR_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_es_AR_json from "virtual:nuxt-i18n-2a25cb46";",
          "key": ""srcDir/es-AR.json"",
          "relative": "srcDir/es-AR.json",
          "specifier": "virtual:nuxt-i18n-2a25cb46",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_es_AR_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
        {
          "cache": true,
          "path": "es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "localeLoaders": [],
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "localeLoaders": [],
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "localeLoaders": [
    [
      "en",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_en_json from "virtual:nuxt-i18n-ff503de3";",
          "key": ""srcDir/en.json"",
          "relative": "srcDir/en.json",
          "specifier": "virtual:nuxt-i18n-ff503de3",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_ja_json from "virtual:nuxt-i18n-3369e867";",
          "key": ""srcDir/ja.json"",
          "relative": "srcDir/ja.json",
          "specifier": "virtual:nuxt-i18n-3369e867",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "async": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
          "cache": "true",
          "importString": "import locale_srcDir_srcDir_fr_json from "virtual:nuxt-i18n-3da2909c";",
          "key": ""srcDir/fr.json"",
          "relative": "srcDir/fr.json",
          "specifier": "virtual:nuxt-i18n-3da2909c",
          "sync": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "i18nModules": [],
    "lazy": false,
    "locales": [],
    "vueI18n": "vue-i18n.config.ts",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-84df1640" /* webpackChunkName: "vue_i18n_options_js_84df1640" */)",
      "relative": "/path/foo/layer2/vue-i18n.options.js",
      "specifier": "virtual:nuxt-i18n-84df1640",
    },
    {
      "importer": "() => import("virtual:nuxt-i18n-faa288dc" /* webpackChunkName: "i18n_custom_ts_faa288dc" */)",
      "relative": "/path/layer1/i18n.custom.ts",
      "specifier": "virtual:nuxt-i18n-faa288dc",
    },
    {
      "importer": "() => import("virtual:nuxt-i18n-42902d1e" /* webpackChunkName: "i18n_config_ts_42902d1e" */)",
      "relative": "/path/to/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-42902d1e",
    },
  ],
}
`;
